--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently npm:start:backend npm:start:frontend",
+    "install": "bash ./scripts/install.sh",
     "start:frontend": "cd frontend && npm start",
     "start:backend": "cd backend && npm start",
     "test": "echo \"Error: no test specified\" && exit 1"
